# faketabletd

./: CMakeLists.txt  LICENSE  README.md  faketabletd.c  faketabletd.h  ini.h  utilities.h  vdev.c
drivers/generic/: CMakeLists.txt  generic.h  pad.c  pen.c
drivers/hs610/: driver.c
source/: driver.c  faketabletd.c  faketabletd.h  ini.c  ini.h  pad.c  pen.c  utilities.c  utilities.h  vdev.c
source/drivers/: CMakeLists.txt
source/drivers/generic/: generic.h  pen.c
source/drivers/hs610/: CMakeLists.txt  driver.c  hs610.h  hs610driver.c  info.c  pad.c  pen.c
